# flask-book-store

./: .env  app.py  pyproject.toml  requirements.txt
instance/: main.db
src/: main.py
src/extensions/: __init__.py  admin_login_required.py  check_user_role.py  enum_select_field.py
src/forms/: book.py  login.py
src/models/: books.py  user.py
src/routes/: admin.py  auth.py  books.py  home.py
src/static/: main.css
src/templates/: book.html  home.html  layout.html  login.html  register.html
src/templates/admin/: admin.html  all_admin.html  book.html  login.html  register.html
src/templates/auth/: login.html  register.html
src/utils/: config.py
